--- a/client/src/style/theme.scss
+++ b/client/src/style/theme.scss
@@ -27,6 +27,9 @@ a:hover {
     text-decoration: underline;
 }
 
+// .btn {
+//     font-family: Arial, Helvetica, sans-serif;
+// }
 
 .btn-primary {
     color: #111;
@@ -81,12 +84,12 @@ a:hover {
     border-color: #638471;
 }
 .btn-success {
-    color: #111;
+    color: $color1;
     background-color: $color5;
     border-color: $color5;
 }
 .btn-success:hover {
-    color: #111;
+    color: $color1;
     background-color: #ab8d00;
     border-color: #9e8200;
 }
